# racket-opencv

./: #types.rkt#  .#types.rkt  .gitignore  .keywords.org  LICENSE  README.org  README.org~  core.rkt  highgui.rkt  imgproc.rkt  info.rkt  iplhelper.rkt  main.rkt  objdetect.rkt  opencv-constants.rkt  types.rkt
C-helper-functions/IplImage/: CMakeLists.txt  ipl_helper  ipl_helper.c  ipl_helper.h  liblibraryipl.dylib
Examples/: CMakeCache.txt  CMakeLists.txt  CameraPoseEstimation.rkt  CascadeClassifier.rkt  ConnectedComponentDetection.rkt  HarrisCorners.rkt  Makefile  MarkerDetector.rkt  MatBasics.rkt  README.org  RacketOnlyImageProcessing.rkt  Rectify.rkt  SimpleImageProcessing.rkt  SimpleMatProcessing.rkt  SimpleVideo.rkt  VideoCanny.rkt  VideoSimple.rkt  VideoSobel.rkt  WarpAffine.rkt  cmake_install.cmake  display-image.rkt  imenu-setup.el  legacy.rkt  load-and-invert-image-old.rkt  load-and-invert-image.rkt  load_and_invert_image  video.rkt
Examples/C/: load_and_invert_image.c
Examples/compiled/: load-and-invert-image-old_rkt.dep  load-and-invert-image-old_rkt.zo  load-and-invert-image_rkt.dep  (+1 more)
Tests/: AllTests.rkt  MatTest.rkt  README.org
compiled/: highgui_rkt.dep  highgui_rkt.zo  types_rkt.dep  types_rkt.zo
opencv/: calib3d.rkt  core.rkt  highgui.rkt  imgproc.rkt  objdetect.rkt  types.rkt  utilities.rkt  videoio.rkt
src/: calib3d.rkt  core.rkt  highgui.rkt  imgproc.rkt  iplhelper.rkt  objdetect.rkt  opencv-lib.rkt  types.rkt  utilities.rkt
tutorials/: FASTCornerDetection.rkt  HarrisCorners.rkt  Rectify.rkt  VideoCanny.rkt  VideoSimple.rkt  VideoSobel.rkt
(+12 files in other folders)
